--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<li><span class="first-block">Website:</span><span
 									class="second-block">www.codeswim.in</span></li>
 							<li><span class="first-block">Address:</span><span class="second-block">Surat,
-									Gujarat<br>Gandhinagar,Gujarat</span></li>
+									Gujarat<br>Bengaluru,Karnataka</span></li>
 						</ul>
 					</div>
 					<div class="col-md-8">
