--- a/index.html
+++ b/index.html
@@ -292,14 +292,14 @@
 								</div>
 							</div>
 						</div>
-						<div class="progress-wrap">
+						<!--<div class="progress-wrap">
 							<h3><span class="name-left">php</span><span class="value-right">Intermediate</span></h3>
 							<div class="progress">
 								<div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 									aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:50%">
 								</div>
 							</div>
-						</div>
+						</div>-->
 						<div class="progress-wrap">
 							<h3><span class="name-left">MySQL</span><span class="value-right">Expert</span></h3>
 							<div class="progress">
